# eps-aws-dashboards

./:  ignored_security_issues.json  .gitallowed  .gitignore  .grype.yaml  .pre-commit-config.yaml  .tool-versions  .trivyignore.yaml  Makefile  README.md  _config.yml  cdk.json  ignored_security_issues.json  package-lock.json  package.json  pyproject.toml  sonar-project.properties  tsconfig.build.json  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/mark_jira_released/: action.yml
.github/actions/update_confluence_jira/: action.yml
.github/scripts/: call_mark_jira_released.sh  create_env_release_notes.sh  create_int_rc_release_notes.sh  delete_stacks.sh  fix_cdk_json.sh  get_current_dev_tag.sh  get_target_deployed_tag.sh
.github/workflows/: auto_approve_dependabot.yml  cdk_package_code.yml  cdk_release_code.yml  ci.yml  delete_old_cloudformation_stacks.yml  pr_title_check.yml  pull_request.yml  quality_checks.yml  release.yml  sync_copilot.yml  update_dev_container_version.yml
_data/: dev_deployments.csv  dev_latest.csv  environments.csv  int_deployments.csv  int_latest.csv  prod_deployments.csv  prod_latest.csv  qa_deployments.csv  qa_latest.csv  ref_deployments.csv  ref_latest.csv
docker/: Dockerfile  entrypoint.sh
release_notes/: v1.0.54-beta.md  v1.0.55-beta.md  v1.0.56-beta.md  v1.0.57-beta.md  v1.0.58-beta.md  v1.0.59-beta.md  v1.0.60-beta.md  v1.0.61-beta.md  v1.0.62-beta.md  v1.0.63-beta.md  v1.0.64-beta.md  v1.0.65-beta.md  v1.0.66-beta.md
