
[project]
python = "^3.12"
name = "eps-aws-dashboards"

[tool.poetry]
name = "eps-aws-dashboards"
version = "0.0.1-alpha"
description = "EPS AWS Dashboards"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-aws-dashboards"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pytest = "^9.0.2"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
pip-licenses = "^5.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
